--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "dependencies": {
     "async-foreach": "^0.1.3",
+    "express-basic-auth": "^1.1.2",
     "express-rate-limit": "^2.9.0",
+    "json-server": "^0.12.0",
     "limiter": "^1.1.2",
     "readline": "^1.3.0",
     "request": "^2.81.0",
